// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`follow-imports button-default-export.js 1`] = `undefined`;

exports[`follow-imports button-from-node-nodules.js 1`] = `
Object {
  "exportedAs": "ThemeProvider",
  "filePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "from": "@component-controls/storybook",
  "originalFilePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
}
`;

exports[`follow-imports button-named-export.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
}
`;

exports[`follow-imports cjs-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/exports/cjs-named-export.js",
  "from": "../exports/cjs-named-export",
  "importedName": "Button",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/exports/cjs-named-export.js",
}
`;

exports[`follow-imports direct-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/direct-import.js",
  "from": "",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/direct-import.js",
}
`;

exports[`follow-imports export-all.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
}
`;

exports[`follow-imports import-node-modules.js 1`] = `
Object {
  "exportedAs": "ThemeProvider",
  "filePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "from": "./button-from-node-nodules",
  "originalFilePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
}
`;

exports[`follow-imports index.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "./button-named-export",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
}
`;

exports[`follow-imports one-level-default-import.js 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
  "from": "./button-default-export",
  "importedName": "default",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
}
`;

exports[`follow-imports one-level-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "./button-named-export",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
}
`;

exports[`follow-imports one-level-index-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "./",
  "importedName": "Button",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
}
`;

exports[`follow-imports one-level-namespace-import.js 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
  "from": "./button-default-export",
  "importedName": "namespace",
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
}
`;
